--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "前端脚手架",
   "main": "src/main.js",
   "repository": "https://github.com/hxh2010/hxh-cli.git",
-  "author": "hongxh <hongxh@vanke.com>",
+  "author": "hongxh <hongxh.work@gmail.com>",
   "license": "MIT",
   "bin": {
     "hxh-cli": "./bin/www"
